--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ include(cmake/function.cmake)    # подхватываем функции, ре
                                  # для простоты мы объединили наборы команд для создания статической библиотеки
 								 # и для создания исполняемого проекта в отдельные функции
 
+add_subdirectory(lib_queue)
+add_subdirectory(lib_stack)
 add_subdirectory(lib_example)    # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_example
 add_subdirectory(lib_matrix)     # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_matrix
 add_subdirectory(main)           # подключаем дополнительный CMakeLists.txt из подкаталога с именем main
